--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-plus": "^2.3.3",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
+    "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
